# modorganizer-check_fnis

./: .gitignore  CMakeLists.txt  appveyor.yml  vcpkg.json
src/: CMakeLists.txt  SConscript  checkFNIS.pro  check_fnis_en.ts  checkfnis.cpp  checkfnis.h
